# TestingExperiments

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: .secrets-example.yaml  config.py  env.yaml
framework/api/: base.py
framework/api/qase/: __init__.py  projects.py
framework/elements/: base.py  button.py  label.py  text_input.py
framework/fixtures/: get_driver.py
framework/helpers/: fake_words.py
framework/pages/: __init__.py  base.py  login.py  project.py  projects.py
framework/pages/qase/: __init__.py  login.py  project.py  projects.py
tests/: test_all.py  test_open.py
