[tool.poetry]
name = "testingexperiments"
version = "0.1.0"
description = ""
authors = ["Watts <watts-galeo@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.8.3"
pytest = "^7.2.2"
dynaconf = "^3.1.12"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
